--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a {text-decoration: none; color:rgb(66, 34, 41)}
 <div class="outer">
   <div class="inner">
     <h1>Ian Walter Sayer</h1>
-	<img src="_images/IanandRuth10.jpg" title="Me and Ruth" />
+	<img src="/_images/IanandRuth10.jpg" title="Me and Ruth" />
 <h2>Some reasonably obscure projects</h2>
 <ul>
 <li><a href="sharc.html">Sharc Timbre Database Interactive</a></li>
