--- a/sharc.html
+++ b/sharc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>sharc</title>
     <script src="script/_z.js"></script>
-    <script src="script/JSUnzip.js"></script>
+    <script src="script/jsunzip.js"></script>
     <script src="script/rawinflate.js"></script>
 
 	<style>
