--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ a {text-decoration: none; color:rgb(66, 34, 41)}
 <ul>
 <li><a href="sharc.html">Sharc Timbre Database Interactive</a></li>
 <li><a href="drum-roms.html">Audition-able 80s Drum ROM collection</a></li>
-<li><a href="nmg2/yomo2g2.html">Nord Modular G2 Utilities</a></li>
+<li><a href="NMG2/yomo2g2.html">Nord Modular G2 Utilities</a></li>
 <ul>
   </div>
 </div>
