--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@ body {
 .outer{
 display: flex;
   height: 100%;/*calc(100% - 16px);*/
-  background: linear-gradient(12.5deg, transparent 50%, rgb(66, 34, 41) 50%), linear-gradient(#c8c8c8, transparent) ;
+  background: linear-gradient(7.5deg, transparent calc(50% - 2px), rgb(66, 34, 41) 50%), linear-gradient(#c8c8c8, transparent) ;
 }
 .inner{margin: auto ; text-align: center}
 h2 {
   font-size: calc(0.95rem + 2.5vmin);
   font-weight: normal;
   color: gray;
+}
+img {
+	border: 8px solid white;
+	box-shadow: 0 2px 6px -2px rgba(0,0,0,0.4);
 }
 h1 {
   font-size: calc(9vmin);
