--- a/loopertest.html
+++ b/loopertest.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title></title>
     <script src="script/_z_.js"></script>
-    <script src="script/JSUnzip.js"></script>
+    <script src="script/jsunzip.js"></script>
     <script src="script/rawinflate.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
     <style type="text/css">
