--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 .outer{
 display: flex;
   height: 100%;/*calc(100% - 16px);*/
-  background: linear-gradient(7.5deg, transparent calc(50% - 2px), rgb(66, 34, 41) 50%), linear-gradient(#c8c8c8, transparent) ;
+  background: linear-gradient(7.5deg, transparent calc(50% - 2px), rgb(12, 52, 197) 50%), linear-gradient(#c8c8c8, transparent) ;
 }
 .inner{margin: auto ; text-align: center}
 h2 {
@@ -48,6 +48,7 @@ a {text-decoration: none; color:rgb(66, 34, 41)}
 <ul>
 <li><a href="sharc.html">Sharc Timbre Database Interactive</a></li>
 <li><a href="drum-roms.html">Audition-able 80s Drum ROM collection</a></li>
+<li><a href="loopertest.html">Sample Looper - Indian Drums</a></li>
 <li><a href="NMG2/yomo2g2.html">Nord Modular G2 Utilities</a></li>
 <ul>
   </div>
